add changes to img in html and css

--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Boring Lecture</title>
   </head>
   <body>
     <h1>Welcome to Boring Page</h1>
+
+    <img id = "img"src="img/boringbooks.jpeg"  width="100" height="100" alt="picture of books">
 
     <h2 class="intro"> Introduction to our lecture:</h2>
 
     <p class="intro"> Paragraph one Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates quam itaque omnis doloremque fuga, repellat voluptatem recusandae adipisci velit est quos obcaecati sunt quidem saepe ipsa corporis ipsum dicta quaerat?</p>
 
     <p class="intro"> Paragraph two: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <img scr="img/boringbooks.jpeg" alt="A picture of books.">
+    
   </body>
-</html>
-
-
-
-
-
-
 </html>
